Try to fix legend overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,6 +68,7 @@ body {
     flex-direction: column;
     background-color: #fff2db;
     overflow-x: hidden;
+    min-width: 0px;
 }
 
 .roman_display {
